# Rpi-pico-W

adc-picoW/: CMakeLists.txt
first-pico-project/: CMakeLists.txt  main.c
myWiFi-pico/: CMakeLists.txt  main.c
